department-service.yml
apiVersion: v1
kind: Service
metadata:
  name: department-service-svc
spec:
  ports:
    - targetPort: 9001
      port: 80
  selector:
    app: department-service-app
