user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
spec:
  ports:
    - targetPort: 9002
      port: 80
  selector:
    app: user-service-app
